--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Velkommen til min quiz om Folketinget
       <p><input type="radio" name="query10" value="Danmarksdemokraterne">D. Danmarksdemokraterne</p>
     </div>
 
-    <input type="button" class="result-button" value="Se dit resultat" onclick="check()">
+    <input type="button" class="result-button" value="Se dit resultat" onclick="seeResult()">
   </form>
 
 <p id="showResult"></p>
