--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="script.js"></script>
 </head>
 <form class="welcome">
-Velkommen til min quiz om Folketinget
+Quiz om Folketinget
 </form>
 <br>
 <body>
