--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
 </head>
-<form class="welcome">
+<main class="welcome">
 Quiz om Folketinget
-</form>
+</main>
 <br>
 <body>
   <form name="quiz" id="quiz">
